# dotfiles

./: .gitignore  install.sh  niri.sh  setup.sh
config/ags/: applauncher.js  bar.js  config.js  notificationPopups.js  style.scss  systemMenu.js
config/alacritty/: alacritty.toml  config.toml  dark.toml  light.toml
config/foot/: foot.ini  light.ini
config/fuzzel/: fuzzel.ini
config/gtklock/: config.ini  style.css
config/helix/: config.toml
config/kanshi/: config  menu.sh
config/layout-switcher/: menu.sh  options
config/locker/: menu.sh  options
config/mako/: config
config/mango/: config.conf  monitors.sh
config/niri/: ags.sh  background.sh  bar.sh  cmd-waybar-signal.sh  config.kdl  config.kdl.base  config.kdl.helvetios  config.kdl.quoth  config.kdl.razer  config.kdl.sucellos  config.kdl.sucellus  config.kdl.zephyrus  config.sh  info.sh  keyboard.sh  pipewire.sh  (+2 more)
config/pinnacle/: Cargo.toml  pinnacle.toml
config/pinnacle/src/: devices.rs  main.rs  rules.rs  selector.rs  startup.rs  theme.rs
config/pinnacle/src/binds/: apps.rs  display.rs  gestures.rs  media.rs  mod.rs  mouse_binds.rs  moves.rs  navigation.rs  snowcap.rs  tags.rs  window.rs
distro/: README.md  void.sh
etc/: ga403wr-fix-audio.patch  models.ini  s2idle-monitor-on.patch
nvim/: init.lua  lazy-lock.json
plasma/: shortcuts.kksrc
setup/: configs.sh  flatpak.sh  git.sh  greetd.sh  npm.sh  rust.sh  sway.sh  tmux.sh  ui.sh  zephyrus.sh  zsh.sh
tools/: brightness.sh  gpu.sh  llama-server.sh  post-vpn.sh  rog.sh  volume.sh  wifi-bt-suspend.sh  wifi-suspend.service  wob.sh
(+54 files in other folders)
